crates/parser/src/snapshots/parser__java__tests__generic_type_declare.snap
---
source: crates/parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "a.test.Test",
    source: None,
    access: Access(
        Public,
    ),
    imports: [
        Package(
            "a.test",
        ),
    ],
    name: "Test",
    methods: [
        Method {
            access: Access(
                Public | Static,
            ),
            name: Some(
                "add",
            ),
            parameters: [
                Parameter {
                    name: Some(
                        "list",
                    ),
                    jtype: Generic(
                        "Collection",
                        [
                            Parameter(
                                "T",
                            ),
                        ],
                    ),
                },
                Parameter {
                    name: Some(
                        "item",
                    ),
                    jtype: Parameter(
                        "T",
                    ),
                },
            ],
            throws: [],
            ret: Int,
            source: None,
        },
    ],
    fields: [],
    super_class: None,
    super_interfaces: [],
}
