crates/parser/src/snapshots/parser__java__tests__int.snap
---
source: crates/parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "a.test.Test",
    source: "/path/to/source/a/test/Test.java",
    access: Access(
        Public,
    ),
    imports: [
        Package(
            "a.test",
        ),
        Class(
            "jakarta.inject.Inject",
        ),
        Class(
            "jakarta.ws.rs.GET",
        ),
        Class(
            "jakarta.ws.rs.Path",
        ),
    ],
    name: "Test",
    methods: [],
    fields: [],
    super_class: None,
    super_interfaces: [],
}
