crates/parser/src/snapshots/parser__java__tests__interface_base.snap
---
source: crates/parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.InterfaceBase",
    source: "/path/to/source/ch/emilycares/InterfaceBase.java",
    access: Access(
        Public,
    ),
    imports: [
        Package(
            "ch.emilycares",
        ),
        Class(
            "java.util.function.IntFunction",
        ),
        Class(
            "java.util.stream.Stream",
        ),
    ],
    name: "InterfaceBase",
    methods: [
        Method {
            access: Access(
                Public,
            ),
            name: Some(
                "mapToObj",
            ),
            parameters: [
                Parameter {
                    name: Some(
                        "mapper",
                    ),
                    jtype: Generic(
                        "IntFunction",
                        [
                            Wildcard,
                            Parameter(
                                "U",
                            ),
                        ],
                    ),
                },
            ],
            throws: [],
            ret: Generic(
                "Stream",
                [
                    Parameter(
                        "U",
                    ),
                ],
            ),
            source: None,
        },
        Method {
            access: Access(
                Public | Static,
            ),
            name: Some(
                "a",
            ),
            parameters: [
                Parameter {
                    name: Some(
                        "arg",
                    ),
                    jtype: Parameter(
                        "A",
                    ),
                },
            ],
            throws: [],
            ret: Parameter(
                "A",
            ),
            source: None,
        },
    ],
    fields: [],
    super_class: None,
    super_interfaces: [],
}
