crates/parser/src/snapshots/parser__java__tests__jannotation.snap
---
source: crates/parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.Annotation",
    source: None,
    access: Access(
        Public,
    ),
    imports: [
        Package(
            "ch.emilycares",
        ),
    ],
    name: "Annotation",
    methods: [],
    fields: [
        Field {
            access: Access(
                Public,
            ),
            name: "value",
            jtype: Int,
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "text",
            jtype: Class(
                "String",
            ),
            source: None,
        },
    ],
    super_class: None,
    super_interfaces: [],
}
