crates/parser/src/snapshots/parser__java__tests__jenum.snap
---
source: crates/parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.Variants",
    source: None,
    access: Access(
        Public,
    ),
    imports: [
        Package(
            "ch.emilycares",
        ),
    ],
    name: "Variants",
    methods: [
        Method {
            access: Access(
                Public,
            ),
            name: Some(
                "getTag",
            ),
            parameters: [],
            throws: [],
            ret: Class(
                "String",
            ),
            source: None,
        },
    ],
    fields: [
        Field {
            access: Access(
                Public,
            ),
            name: "A",
            jtype: Class(
                "Variants",
            ),
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "B",
            jtype: Class(
                "Variants",
            ),
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "C",
            jtype: Class(
                "Variants",
            ),
            source: None,
        },
        Field {
            access: Access(
                Private | Final,
            ),
            name: "tag",
            jtype: Class(
                "String",
            ),
            source: None,
        },
    ],
    super_class: None,
    super_interfaces: [],
}
