crates/parser/src/snapshots/parser__java__tests__jtype_recognition.snap
---
source: crates/parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "a.test.Types",
    source: None,
    access: Access(
        Public,
    ),
    imports: [
        Package(
            "a.test",
        ),
    ],
    name: "Types",
    methods: [
        Method {
            access: Access(
                Public | Static,
            ),
            name: Some(
                "main",
            ),
            parameters: [
                Parameter {
                    name: Some(
                        "args",
                    ),
                    jtype: Array(
                        Class(
                            "String",
                        ),
                    ),
                },
            ],
            throws: [],
            ret: Void,
            source: None,
        },
    ],
    fields: [
        Field {
            access: Access(
                Public,
            ),
            name: "LOG",
            jtype: Class(
                "Logger",
            ),
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "IS_ACTIVE",
            jtype: Boolean,
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "one_byte",
            jtype: Byte,
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "one_int",
            jtype: Int,
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "one_short",
            jtype: Short,
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "one_long",
            jtype: Long,
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "one_double",
            jtype: Double,
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "one_float",
            jtype: Float,
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "one_char",
            jtype: Char,
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "one_string",
            jtype: Class(
                "String",
            ),
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "one_list",
            jtype: Generic(
                "List",
                [
                    Class(
                        "String",
                    ),
                ],
            ),
            source: None,
        },
        Field {
            access: Access(
                Public,
            ),
            name: "one_map",
            jtype: Generic(
                "Map",
                [
                    Int,
                    Class(
                        "String",
                    ),
                ],
            ),
            source: None,
        },
    ],
    super_class: None,
    super_interfaces: [],
}
