crates/parser/src/snapshots/parser__java__tests__super_class.snap
---
source: crates/parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "a.test.Test",
    source: None,
    access: Access(
        Public,
    ),
    imports: [
        Package(
            "a.test",
        ),
    ],
    name: "Test",
    methods: [],
    fields: [],
    super_class: Name(
        "AThing",
    ),
    super_interfaces: [],
}
