crates/parser/src/snapshots/parser__java__tests__super_interfaces.snap
---
source: crates/parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.SuperInterface",
    source: None,
    access: Access(
        Public,
    ),
    imports: [
        Package(
            "ch.emilycares",
        ),
        Class(
            "java.util.Collection",
        ),
        Class(
            "java.util.List",
        ),
        Class(
            "java.util.stream.Stream",
        ),
        Class(
            "java.util.stream.StreamSupport",
        ),
    ],
    name: "SuperInterface",
    methods: [
        Method {
            access: Access(
                Public,
            ),
            name: Some(
                "stream",
            ),
            parameters: [],
            throws: [],
            ret: Generic(
                "Stream",
                [
                    Parameter(
                        "E",
                    ),
                ],
            ),
            source: None,
        },
    ],
    fields: [],
    super_class: None,
    super_interfaces: [
        ClassPath(
            "java.util.Collection",
        ),
        ClassPath(
            "java.util.List",
        ),
    ],
}
