crates/parser/src/snapshots/parser__java__tests__thrower.snap
---
source: crates/parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.Thrower",
    source: None,
    access: Access(
        Public,
    ),
    imports: [
        Package(
            "ch.emilycares",
        ),
        Class(
            "java.io.IOException",
        ),
    ],
    name: "Thrower",
    methods: [
        Method {
            access: Access(
                Public,
            ),
            name: Some(
                "ioThrower",
            ),
            parameters: [],
            throws: [
                Class(
                    "IOException",
                ),
            ],
            ret: Void,
            source: None,
        },
        Method {
            access: Access(
                Public,
            ),
            name: Some(
                "ioThrower",
            ),
            parameters: [
                Parameter {
                    name: Some(
                        "a",
                    ),
                    jtype: Int,
                },
            ],
            throws: [
                Class(
                    "IOException",
                ),
                Class(
                    "IOException",
                ),
            ],
            ret: Void,
            source: None,
        },
    ],
    fields: [],
    super_class: None,
    super_interfaces: [],
}
